Se corrigen problemas y anexa archivo de config java8code.iml para ejecución con IntelliJ IDE.